# marketpulse-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.kafka.yml
docs/: AI_WORKLOG.md  DEPLOYMENT.md  MVP_SCOPE.md  PRODUCT_BRIEF.md  TESTING_STRATEGY.md
docs/DECISIONS/: ADR-0001-initial-architecture.md
docs/design-system/: README.md  SKILL.md
docs/design-system/preview/: _card.css  agent-glyphs.html  agent-step.html  buttons.html  citation-confidence.html  colors-ai-info.html  colors-backgrounds.html  colors-foregrounds.html  colors-semantic.html  data-table.html  data-viz.html  elevation.html  inputs.html  kafka-pipeline.html  kpi-card.html  logo.html  motion.html  pills.html  radii.html  source-card.html  source-marks.html  spacing-scale.html  status-dots.html  type-body.html  type-display-headings.html  type-eyebrow.html  type-mono.html
docs/superpowers/specs/: 2026-05-28-retrieval-v2-design.md
frontend/src/: App.jsx  Dashboard.jsx  DataSources.jsx  Monitoring.jsx  QueryConsole.jsx  QueryHistory.jsx  Settings.jsx  api.js  cards.jsx  charts.jsx  index.html  primitives.jsx  shell.jsx
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: check.sh  ci-local.sh  evaluate.py  format.sh  test.sh
src/marketpulse/: db.py  observability.py
src/marketpulse/api/: __init__.py  __main__.py  app.py  deps.py  schemas.py  security.py
src/marketpulse/db/: __init__.py  client.py
src/marketpulse/graph/: __init__.py  build.py  nodes.py  state.py
src/marketpulse/ingestion/: __main__.py  consumer.py  indexer.py  kafka_config.py  producer.py  sources.py
src/marketpulse/llm/: gemini.py  provider.py
src/marketpulse/retrieval/: __main__.py  retriever.py
src/marketpulse/synthesis/: __main__.py  answer.py  prompts.py
src/marketpulse/ui/: app.py
src/marketpulse/web/: App.jsx  Dashboard.jsx  DataSources.jsx  Monitoring.jsx  QueryHistory.jsx  Settings.jsx  api.js  colors_and_type.css  components.jsx  index.html  ui-kit.css
tests/: conftest.py  test_answer.py  test_api.py  test_db.py  test_graph.py  test_indexer.py  test_pipeline.py  test_prompts.py  test_retriever.py  test_security.py  test_sources.py
