[project]
name = "marketpulse-ai"
version = "0.1.0"
description = "Real-time financial intelligence RAG (v0.1 MVP scope)"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "feedparser>=6.0.12",
    "google-genai>=2.6.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

# ---------------------------------------------------------------------------
# Build system — declares marketpulse-ai as an installable package living in
# src/marketpulse/. uv installs it in editable mode on `uv sync`, which puts
# the package on sys.path so `python -m marketpulse.ingestion` works.
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketpulse"]

# ---------------------------------------------------------------------------
# ruff (linter + formatter, replaces flake8 + black + isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults: pyflakes + pycodestyle + isort + bugbear + simplify.
# Keep the set small for v0.1; can broaden later without churning history.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely-bug patterns)
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long — formatter handles wrapping
]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# mypy (static type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src/marketpulse"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Third-party libs without type stubs — silence "missing imports" noise.
[[tool.mypy.overrides]]
module = [
    "feedparser",
    "sentence_transformers",
    "chromadb",
    "chromadb.*",
    "google.genai",
    "google.genai.*",
    "dotenv",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
