[project]
name = "marketpulse-ai"
version = "0.4.0"
description = "Real-time financial intelligence Self-RAG API (v0.4)"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "chromadb>=1.5.9",
    "feedparser>=6.0.12",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "langfuse>=4.7.0",
    "langgraph>=1.2.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    # ragas 0.4.x imports langchain_community.chat_models.vertexai at module load,
    # but that submodule was removed in langchain-community 0.4.x. Pin to the last
    # 0.3.x release so `from ragas import evaluate` works without a runtime crash.
    "langchain-community>=0.3.31,<0.4",
    "langchain-google-genai>=2.0.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "slowapi>=0.1.9",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

# ---------------------------------------------------------------------------
# Build system — declares marketpulse-ai as an installable package living in
# src/marketpulse/. uv installs it in editable mode on `uv sync`, which puts
# the package on sys.path so `python -m marketpulse.ingestion` works.
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketpulse"]

# ---------------------------------------------------------------------------
# ruff (linter + formatter, replaces flake8 + black + isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults: pyflakes + pycodestyle + isort + bugbear + simplify.
# Keep the set small for v0.1; can broaden later without churning history.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely-bug patterns)
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long — formatter handles wrapping
]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# mypy (static type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src/marketpulse"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Third-party libs without type stubs — silence "missing imports" noise.
[[tool.mypy.overrides]]
module = [
    "feedparser",
    "sentence_transformers",
    "chromadb",
    "chromadb.*",
    "google.genai",
    "google.genai.*",
    "dotenv",
    "langfuse",
    "langfuse.*",
    "langgraph",
    "langgraph.*",
    "ragas",
    "ragas.*",
    "bcrypt",
    "slowapi",
    "slowapi.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
